<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OurAlarm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <color name="front_text">#fff</color>
    <color name="background_bottom_bar_material">#ff562c7a</color>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time">Alarm Time</string>
    <string name="message_title_text">Alarm Message</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_all">All Day</string>
    <string name="title_activity_result">Result</string>
    <string name="cancel">キャンセル</string>
    <string name="delete">削除</string>
    <string name="text_edit_hint_message">メッセージを入力ください</string>

</resources>
