<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vn.heallife.duchv.ouralarm.ui.fragment.AlarmEdit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background_material_light"
        android:clickable="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/alarm_item_height"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/set_date_time">
            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:textStyle="bold"
                android:layout_weight="0.4"
                android:layout_marginLeft="0dp" />
            <EditText
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:id="@+id/alarm_hour"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" : "
                android:textSize="@dimen/abc_text_size_headline_material"
                android:textStyle="bold"/>
            <EditText
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:id="@+id/alarm_minus"/>
            </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#aaa"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/alarm_item_height"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:textStyle="bold"
                android:text="@string/repeat"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeat_all"
                android:textSize="@dimen/abc_text_size_medium_material"/>
            </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#aaa"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:textStyle="bold"
                android:text="@string/message_title_text"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_edit_hint_message"
                android:padding="8dp"
                android:gravity="center"
                android:id="@+id/alarm_message"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#aaa"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/abc_action_button_min_height_material"
            android:id="@+id/bottom_menu_top"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical"
            android:padding="@dimen/abc_action_bar_default_padding_material"
            android:background="@color/background_bottom_bar_material">
            <ImageButton
                android:layout_width="@dimen/abc_action_button_min_width_material"
                android:layout_height="@dimen/abc_action_button_min_height_material"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                android:background="@color/background_bottom_bar_material"
                android:id="@+id/add_cancel"/>
            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

            </View>
            <ImageButton
                android:layout_width="@dimen/abc_action_button_min_width_material"
                android:layout_height="@dimen/abc_action_button_min_height_material"
                android:src="@android:drawable/ic_menu_save"
                android:background="@color/background_bottom_bar_material"
                android:id="@+id/add_done"/>
        </LinearLayout>

        </LinearLayout>


</FrameLayout>
